--- a/package.json
+++ b/package.json
@@ -15,11 +15,22 @@
   "author": "David Beath",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^0.8.0",
     "body-parser": "*",
+    "connect-flash": "^0.1.1",
+    "connect-roles": "^3.0.3",
+    "cookie-parser": "^1.3.2",
+    "errorhandler": "^1.1.1",
     "express": ">4.0.0",
+    "express-session": "^1.7.6",
     "hbs": "*",
-    "morgan": "*",
+    "method-override": "*",
     "mongoose": "*",
+    "morgan": "*",
+    "nconf": "^0.6.9",
+    "passport": "^0.2.0",
+    "passport-http": "^0.2.2",
+    "passport-local": "^1.0.0",
     "validator": "*"
   }
 }
